# ports-and-adapters

./: .gitignore  CHANGELOG.md  ports-and-adapters.cabal
src/: Ports.hs
src/Ports/: Adapters.hs
test/: Main.hs
